<resources>
    <string name="app_name">Lab02: Todo Or Not</string>
    <string name="todo_or_not_list_text">Todo or Not list</string>
    <string name="create_list_title_text">Enter list title</string>
    <string name="add_title_text">Add</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_list_item_text">Enter list item</string>
    <string name="select_date">Enter Date</string>
    <string name="add_task_text">Add Item</string>
    <string name="update_task_text">Update</string>
    <string name="archive_item_text">Archive</string>
    <string name="delete_item_text">Delete</string>
    <string name="item_name_text">Item Name</string>
    <string name="item_date_text">Date</string>
    <string name="complete_text">isComplete</string>
    <string name="create_new_record">Successfully created record with id of %d</string>
    <string name="update_record">Successfully updated record with id of %d</string>
    <string name="complete_list">Successfully changed the status of this list item with id of %d</string>
    <string name="completed_text">Completed</string>
    <string name="not_completed_text">Incomplete</string>
    <string name="complete_button_text">Complete</string>
    <string name="delete_record">Successfully deleted the list item</string>
    <string name="task_todo_text">Enter tasks ToDo</string>
    <string name="archive_title_list_text">List Title</string>
    <string name="view_archive">Archive view</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="url_pref_default">http://www.youcode.ca/</string>
    <string name="username_pref_default">eron</string>
    <string name="password_pref_default">miranda</string>
    <string name="preferences">Preferences</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="backgroundcolor">Background Color</string>
    <string name="background_summary">Summary</string>
    <string name="font_header">Font Settings</string>
    <string name="font_size">Font Size</string>
</resources>