<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/archive_listview_item_list_title_textview"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textColor="#3F51B5"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:text="@string/archive_title_list_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/archive_listview_item_name"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            tools:text="@string/item_name_text" />

        <TextView
            android:id="@+id/archive_listview_item_complete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            tools:text="@string/complete_text" />

    </LinearLayout>

    <TextView
        android:id="@+id/archive_listview_item_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        tools:text="@string/item_date_text" />

</LinearLayout>