<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#faebd7"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingTop="10dp"
    android:paddingRight="10dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/activity_main_todo_or_not_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/todo_or_not_list_text"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/activity_main_list_title_edittext"
            android:layout_width="221dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/create_list_title_text"
            android:inputType="textPersonName"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:autofillHints="" />

        <Button
            android:id="@+id/activity_main_add_title_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="#33A32F"
            android:text="@string/add_title_text"
            android:textColor="#FAFAFA"
            android:textSize="18sp" />

        <Button
            android:id="@+id/activity_main_list_title_update_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#3F51B5"
            android:text="@string/update_task_text"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/main_activity_item_title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/task_todo_text"
        android:textColor="#000000"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/activity_main_list_title_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#142DBD"/>

    <EditText
        android:id="@+id/activity_main_list_item_name_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_list_item_text"
        android:inputType="textPersonName"
        android:textColor="#0C0C0C"
        android:textColorHint="#0E0E0E"
        android:autofillHints="" />

    <EditText
        android:id="@+id/activity_main_date_editTextDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/select_date"
        android:inputType="date"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:autofillHints="" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/activity_main_add_item_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:background="#33A32F"
            android:onClick="onAddListItem"
            android:text="@string/add_task_text"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <Button
            android:id="@+id/activity_main_update_item_Button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="#3F51B5"
            android:onClick="onUpdateListItem"
            android:text="@string/update_task_text"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <Button
            android:id="@+id/activity_main_delete_item_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="#E91E63"
            android:onClick="onDeleteListItem"
            android:text="@string/delete_item_text"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <Button
            android:id="@+id/activity_main_archive_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="#CAB60B"
            android:onClick="onArchiveListItem"
            android:text="@string/archive_item_text"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <Button
            android:id="@+id/activity_main_complete_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="#009688"
            android:onClick="onCompleteListItem"
            android:text="@string/complete_button_text"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />
    </LinearLayout>

    <ListView
        android:id="@+id/activity_main_list_item_listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp" />


</LinearLayout>